[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/img/char.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 49.5621

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/COUTURE-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 2 )

[node name="Player" type="Area2D"]
position = Vector2( 208.361, 145.493 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FollowersLabel" type="Label" parent="."]
margin_left = -39.0
margin_top = -17.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeTimer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="UpgradeTimer" to="." method="_on_UpgradeTimer_timeout"]
